# Egzamin

./: .gitignore  Codex Prompt3.txt  Codex prompt2.txt  README.md  app.js  codex prompt 6.txt  codex prompt.txt  index.html  mock-server.js  package-lock.json  package.json  style.css  test.html
cpp-backend/: AuditLogger.cpp  AuditLogger.h  CMakeLists.txt  Config.cpp  Config.h  JsonResponse.cpp  JsonResponse.h  LdapClient.cpp  LdapClient.h  README.md  RoleResolver.cpp  RoleResolver.h  config.example  login.cpp  main_bootstrap.cpp  main_login.cpp
docs/: deployment-and-ad-role-detection-report.md  exam-demo-checklist.md  exam-explanation-pureservice-comparison.md  live-coding-cpp-audit-logging-guide.md  local-login-and-cpp-audit-logging-report.md  pureservice-comparison.md  traditional-ad-login-and-audit-logging-report.md  ubuntu-ad-kerberos-completion-report.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: authApi.ts
frontend/src/auth/: localAuth.ts
frontend/src/components/: AdminDashboard.tsx  ConversationPanel.tsx  KnowledgeBase.tsx  LoadingScreen.tsx  ManualLogin.tsx  NotificationBanner.tsx  ReplyBox.tsx  RightInfoPanel.tsx  Sidebar.tsx  SupportDashboard.tsx  TicketDetail.tsx  TicketList.tsx  Topbar.tsx  UserDashboard.tsx  helpers.ts
frontend/src/data/: seedData.ts
frontend/src/state/: helpdeskStore.ts
frontend/src/types/: helpdesk.ts
